--- a/Technopark.N1/Technopark.N1.vcxproj
+++ b/Technopark.N1/Technopark.N1.vcxproj
@@ -71,6 +71,7 @@
     <ClCompile Include="main1.cpp" />
     <ClCompile Include="main2.cpp" />
     <ClCompile Include="main3.cpp" />
+    <ClCompile Include="main31.cpp" />
     <ClCompile Include="main4.cpp" />
     <ClCompile Include="main5.cpp" />
     <ClCompile Include="main6j.cpp" />
