--- a/Technopark.N1/Technopark.N1.vcxproj.filters
+++ b/Technopark.N1/Technopark.N1.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="main6.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main31.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
